Updated keybindings to follow specifications.

--- a/.config/i3/keybindings.conf
+++ b/.config/i3/keybindings.conf
@@ -25,11 +25,6 @@ bindsym   $MAC_CTRL+v                 split v
 # TODO : fix
 bindsym   $MAC_CMD+$MAC_CTRL+f           fullscreen toggle
 
-# change container layout (stacked, tabbed, toggle split)
-bindsym $MAC_CTRL+m layout stacking
-bindsym $MAC_CTRL+t layout tabbed
-bindsym $MAC_CTRL+s layout toggle split
-
 # toggle tiling / floating
 bindsym   $MAC_CTRL+$shift+space      floating toggle
 
@@ -42,56 +37,111 @@ bindsym   $MAC_CTRL+a                 focus parent
 # focus the child container
 bindsym   $MAC_CTRL+d                 focus child
 
-#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ MOVING ACROSS WORKSPACES ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
+#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Moving Focus between Work Spaces ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
 
-# switch to workspace using indexes
-bindsym   $MAC_CTRL+1                 workspace $ws1; layout tabbed
-bindsym   $MAC_CTRL+2                 workspace $ws2; layout tabbed
-bindsym   $MAC_CTRL+3                 workspace $ws3; layout tabbed
-bindsym   $MAC_CTRL+4                 workspace $ws4; layout stacking
-bindsym   $MAC_CTRL+5                 workspace $ws5; layout default
+#| Using indexes
+bindsym   $MAC_CTRL+1                           workspace $ws1; layout tabbed
+bindsym   $MAC_CTRL+2                           workspace $ws2; layout tabbed
+bindsym   $MAC_CTRL+3                           workspace $ws3; layout tabbed
+bindsym   $MAC_CTRL+4                           workspace $ws4; layout stacking
+bindsym   $MAC_CTRL+5                           workspace $ws5; layout default
+       
+#| Using arrow keys          
+bindsym   $MAC_CTRL+Left                        workspace prev
+bindsym   $MAC_CTRL+Right                       workspace next
+   
+#| Using VIM keys      
+bindsym   $MAC_CTRL+j                           workspace prev
+bindsym   $MAC_CTRL+semicolon                   workspace next
 
-# switch to workspace using arrow keys, and tab (not functional yet)
-bindsym   $MAC_CTRL+Left              workspace next
-bindsym   $MAC_CTRL+Right             workspace prev
-bindsym   $MAC_CMD+$tab              workspace back_and_forth
+#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Moving Focus between Displays ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
 
-#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ MOVING WINDOWS ACROSS WORKSPACES ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
+#| Using indexes
+bindsym   $MAC_CTRL+MAC_ALT+1                   focus output primary
+      
+#| Using arrow keys      
+bindsym   $MAC_CTRL+$MAC_ALT+Left               focus output left
+bindsym   $MAC_CTRL+$MAC_ALT+Down               focus output down
+bindsym   $MAC_CTRL+MAC_ALT+Up                  focus output up
+bindsym   $MAC_CTRL+MAC_ALT+Right               focus output right
+      
+#| Using VIM keys      
+bindsym   $MAC_CTRL+$MAC_ALT+j                  focus output left
+bindsym   $MAC_CTRL+$MAC_ALT+k                  focus output down
+bindsym   $MAC_CTRL+$MAC_ALT+l                  focus output up
+bindsym   $MAC_CTRL+$MAC_ALT+semicolon          focus output right
+   
+#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Moving Windows between Work Spaces ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
 
-# move focused container to workspace
-bindsym   $MAC_CTRL+Shift+1           move container to workspace number $ws1
-bindsym   $MAC_CTRL+Shift+2           move container to workspace number $ws2
-bindsym   $MAC_CTRL+Shift+3           move container to workspace number $ws3
-bindsym   $MAC_CTRL+Shift+4           move container to workspace number $ws4
-bindsym   $MAC_CTRL+Shift+5           move container to workspace number $ws5
+#| Using indexes
+bindsym   $MAC_CTRL+$shift+1                    move container to workspace number $ws1
+bindsym   $MAC_CTRL+$shift+2                    move container to workspace number $ws2
+bindsym   $MAC_CTRL+$shift+3                    move container to workspace number $ws3
+bindsym   $MAC_CTRL+$shift+4                    move container to workspace number $ws4
+bindsym   $MAC_CTRL+$shift+5                    move container to workspace number $ws5
+     
+#| Using arrow keys         
+bindsym   $MAC_CTRL+$shift+Left                 move container to workspace prev
+bindsym   $MAC_CTRL+$shift+Right                move container to workspace next
+     
+#| Using VIM keys     
+bindsym   $MAC_CTRL+$shift+j                    move container to workspace prev
+bindsym   $MAC_CTRL+$shift+semicolon            move container to workspace next
 
-#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ MOVING WINDOWS ON WORKSPACES ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
+#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Moving Windows between Displays ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
 
-# move focused window around
-bindsym   $MAC_CTRL+$shift+j           move left
-bindsym   $MAC_CTRL+$shift+k           move down
-bindsym   $MAC_CTRL+$shift+l           move up
-bindsym   $MAC_CTRL+$shift+semicolon   move right
+#| Using indexes
+bindsym   $MAC_CTRL+MAC_ALT+$shift+1            move container to output primary
 
-# alternatively, you can use the cursor keys:
-bindsym   $MAC_CTRL+$shift+Left        move left
-bindsym   $MAC_CTRL+$shift+Down        move down
-bindsym   $MAC_CTRL+$shift+Up          move up
-bindsym   $MAC_CTRL+$shift+Right       move right
+#| Using arrow keys
+bindsym   $MAC_CTRL+$MAC_ALT+$shift+Left        move container to output left
+bindsym   $MAC_CTRL+$MAC_ALT+$shift+Down        move container to output down
+bindsym   $MAC_CTRL+MAC_ALT+$shift+Up           move container to output up
+bindsym   $MAC_CTRL+MAC_ALT+$shift+Right        move container to output right
 
-#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ MOVING FOCUS BETWEEN WINDOWS ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
+#| Using VIM keys
+bindsym   $MAC_CTRL+$MAC_ALT+$shift+j           move container to output  left
+bindsym   $MAC_CTRL+$MAC_ALT+$shift+k           move container to output  down
+bindsym   $MAC_CTRL+$MAC_ALT+$shift+l           move container to output  up
+bindsym   $MAC_CTRL+$MAC_ALT+$shift+semicolon   move container to output  right
 
-# changing focus on window
-bindsym   $MAC_CTRL+j                  focus left
-bindsym   $MAC_CTRL+k                  focus down
-bindsym   $MAC_CTRL+l                  focus up
-bindsym   $MAC_CTRL+semicolon          focus right
+#~~~~~~~~~~~~~~~~~~~~~~~~~~ Moving Focus between windows on the same Work Space and Display ~~~~~~~~~~~~~~~~~~~~~~~~~~#
 
-# alternatively, you can use the cursor keys:
-# bindsym   $MAC_CTRL+Left               focus left
-# bindsym   $MAC_CTRL+Down               focus down
-# bindsym   $MAC_CTRL+Up                 focus up
-# bindsym   $MAC_CTRL+Right              focus right
+#| Using arrow keys
+bindsym   $MAC_CTRL+$MAC_CMD+Left               focus left
+bindsym   $MAC_CTRL+$MAC_CMD+Down               focus down
+bindsym   $MAC_CTRL+$MAC_CMD+Up                 focus up
+bindsym   $MAC_CTRL+$MAC_CMD+Right              focus right
+
+#| Using VIM keys
+bindsym   $MAC_CTRL+$MAC_CMD+j                  focus left
+bindsym   $MAC_CTRL+$MAC_CMD+k                  focus down
+bindsym   $MAC_CTRL+$MAC_CMD+l                  focus up
+bindsym   $MAC_CTRL+$MAC_CMD+semicolon          focus right
+
+#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Moving Windows on the same Work Space and Display ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
+
+#| Using arrow keys
+bindsym   $MAC_CTRL+$MAC_CMD+$shift+j           move left
+bindsym   $MAC_CTRL+$MAC_CMD+$shift+k           move down
+bindsym   $MAC_CTRL+$MAC_CMD+$shift+l           move up
+bindsym   $MAC_CTRL+$MAC_CMD+$shift+semicolon   move right
+   
+#| Using VIM keys   
+bindsym   $MAC_CTRL+$MAC_CMD+$shift+Left        move left
+bindsym   $MAC_CTRL+$MAC_CMD+$shift+Down        move down
+bindsym   $MAC_CTRL+$MAC_CMD+$shift+Up          move up
+bindsym   $MAC_CTRL+$MAC_CMD+$shift+Right       move right
+
+#~~~~~~~~~~~~~~~~~~~~~~~~~~~ Switching focus to a different windows at an unknown location ~~~~~~~~~~~~~~~~~~~~~~~~~~~#
+
+bindsym   $MAC_CMD+$tab                         workspace back_and_forth
+
+#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Switching layouts ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
+
+bindsym   $MAC_CTRL+m layout                    stacking
+bindsym   $MAC_CTRL+t layout                    tabbed
+bindsym   $MAC_CTRL+s layout                    toggle split
 
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ MANAGING USER SESSION ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
 
