Moved some configuration from config to aethetic.

--- a/.config/i3/aesthetics.conf
+++ b/.config/i3/aesthetics.conf
@@ -1,3 +1,21 @@
+# Font for window titles. Will also be used by the bar unless a different font is used in the bar {} block below.
+font $fontFamily $fontsize
+
+# property                border       background   text         indicator
+client.focused            $background  $background  $foreground  $none
+client.unfocused          $background  $background  $inactive    $none
+client.focused_inactive   $background  $background  $accent      $none
+client.urgent             $important   $important   $foreground  $none
+
+# Hide window name bar that is on the top of windows by default.
+default_border            pixel        0
+
+# sets the border size of a floating window.
+default_floating_border   normal       2
+
+# but when the window name bar is visible, show the text alligned to the center.
+title_align               center
+
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ BAR SETTINGS ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
 
 bar {
