--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -1,6 +1,7 @@
 live_config_reload: true
 
 window:
+  dynamic_title: true
   padding:
     x: 5
     y: 5
@@ -20,11 +21,11 @@ colors:
     foreground: "#FFFFFF"
     background: "#000000"
 
-key_bindings:
-  - { key: V, mods: Command, action: Paste }
-  - { key: V, mods: Control, action: Paste }
-  - { key: C, mods: Command, action: Copy  }
-  - { key: C, mods: Control, action: Copy  }
+# key_bindings:
+  # - { key: V, mods: Command, action: Paste }
+  # - { key: V, mods: Control, action: Paste }
+  # - { key: C, mods: Command, action: Copy  }
+  # - { key: C, mods: Control, action: Copy  }
 
 cursor:
   style:
