Fixed #2 variables did not have a $ in front of them.

--- a/.config/i3/keybindings.conf
+++ b/.config/i3/keybindings.conf
@@ -37,6 +37,10 @@ bindsym   $MAC_CTRL+a                 focus parent
 # focus the child container
 bindsym   $MAC_CTRL+d                 focus child
 
+bindsym   $MAC_CMD+0 exec "i3-nagbar -m '$MAC_CMD was pressed'"
+bindsym   $MAC_ALT+0 exec "i3-nagbar -m '$MAC_ALT was pressed'"
+bindsym   $MAC_CTRL+0 exec "i3-nagbar -m '$MAC_CTRL was pressed'"
+
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Moving Focus between Work Spaces ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
 
 #| Using indexes
@@ -57,13 +61,13 @@ bindsym   $MAC_CTRL+semicolon                   workspace next
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Moving Focus between Displays ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
 
 #| Using indexes
-bindsym   $MAC_CTRL+MAC_ALT+1                   focus output primary
+bindsym   $MAC_CTRL+$MAC_ALT+1                   focus output primary
       
 #| Using arrow keys      
 bindsym   $MAC_CTRL+$MAC_ALT+Left               focus output left
 bindsym   $MAC_CTRL+$MAC_ALT+Down               focus output down
-bindsym   $MAC_CTRL+MAC_ALT+Up                  focus output up
-bindsym   $MAC_CTRL+MAC_ALT+Right               focus output right
+bindsym   $MAC_CTRL+$MAC_ALT+Up                  focus output up
+bindsym   $MAC_CTRL+$MAC_ALT+Right               focus output right
       
 #| Using VIM keys      
 bindsym   $MAC_CTRL+$MAC_ALT+j                  focus output left
@@ -91,19 +95,19 @@ bindsym   $MAC_CTRL+$shift+semicolon            move container to workspace next
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Moving Windows between Displays ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
 
 #| Using indexes
-bindsym   $MAC_CTRL+MAC_ALT+$shift+1            move container to output primary
+bindsym   $MAC_CTRL+$MAC_ALT+$shift+1           move container to output primary
 
 #| Using arrow keys
-bindsym   $MAC_CTRL+$MAC_ALT+$shift+Left        move container to output left
-bindsym   $MAC_CTRL+$MAC_ALT+$shift+Down        move container to output down
-bindsym   $MAC_CTRL+MAC_ALT+$shift+Up           move container to output up
-bindsym   $MAC_CTRL+MAC_ALT+$shift+Right        move container to output right
+bindsym   $MAC_CTRL+$MAC_ALT+$shift+Left        move container to output left; focus output left
+bindsym   $MAC_CTRL+$MAC_ALT+$shift+Down        move container to output down; focus output down
+bindsym   $MAC_CTRL+$MAC_ALT+$shift+Up          move container to output up; focus output up
+bindsym   $MAC_CTRL+$MAC_ALT+$shift+Right       move container to output right; focus output righ
 
 #| Using VIM keys
-bindsym   $MAC_CTRL+$MAC_ALT+$shift+j           move container to output  left
-bindsym   $MAC_CTRL+$MAC_ALT+$shift+k           move container to output  down
-bindsym   $MAC_CTRL+$MAC_ALT+$shift+l           move container to output  up
-bindsym   $MAC_CTRL+$MAC_ALT+$shift+semicolon   move container to output  right
+bindsym   $MAC_CTRL+$MAC_ALT+$shift+j           move container to output left; focus output left
+bindsym   $MAC_CTRL+$MAC_ALT+$shift+k           move container to output down; focus output down
+bindsym   $MAC_CTRL+$MAC_ALT+$shift+l           move container to output up; focus output up
+bindsym   $MAC_CTRL+$MAC_ALT+$shift+semicolon   move container to output right; focus output righ
 
 #~~~~~~~~~~~~~~~~~~~~~~~~~~ Moving Focus between windows on the same Work Space and Display ~~~~~~~~~~~~~~~~~~~~~~~~~~#
 
