Added shortcuts for screenshots

--- a/.config/i3/keybindings.conf
+++ b/.config/i3/keybindings.conf
@@ -1,55 +1,80 @@
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ KEY BINDINGS ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
 
 # reload the configuration file
-bindsym   $MAC_CTRL+$shift+c          reload
+bindsym   $MAC_CTRL+$shift+c                    reload
 
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
-bindsym   $MAC_CTRL+$shift+r          restart
+bindsym   $MAC_CTRL+$shift+r                    restart
 
-# start a terminal
-bindsym   $MAC_CTRL+Return            exec $terminal
+# start a terminal          
+bindsym   $MAC_CTRL+Return                      exec $terminal
 
-# killing all instances of a window
-bindsym   $MAC_CMD+q                 [class=__focused__] kill
+# killing all instances of a window         
+bindsym   $MAC_CMD+q                 [          class=__focused__] kill
 
-# kill focused window
-bindsym   $MAC_CMD+$shift+q          kill
+# kill focused window           
+bindsym   $MAC_CMD+$shift+q          k          ill
 
-# split in horizontal orientation
-bindsym   $MAC_CTRL+h                 split h
+# split in horizontal orientation           
+bindsym   $MAC_CTRL+h                           split h
 
-# split in vertical orientation
-bindsym   $MAC_CTRL+v                 split v
+# split in vertical orientation         
+bindsym   $MAC_CTRL+v                           split v
 
 # enter fullscreen mode for the focused container
 # TODO : fix
-bindsym   $MAC_CMD+$MAC_CTRL+f           fullscreen toggle
+bindsym   $MAC_CMD+$MAC_CTRL+f                  fullscreen toggle
 
 # toggle tiling / floating
-bindsym   $MAC_CTRL+$shift+space      floating toggle
+bindsym   $MAC_CTRL+$shift+space                floating toggle
 
 # change focus between tiling / floating windows
-bindsym   $MAC_CTRL+$shift+$tab       focus mode_toggle
+bindsym   $MAC_CTRL+$shift+$tab                 focus mode_toggle
 
-# focus the parent container
-bindsym   $MAC_CTRL+a                 focus parent
+# focus the parent container            
+bindsym   $MAC_CTRL+a                           focus parent
 
-# focus the child container
-bindsym   $MAC_CTRL+d                 focus child
+# focus the child container         
+bindsym   $MAC_CTRL+d                           focus child
 
-bindsym   $MAC_CMD+0 exec "i3-nagbar -m '$MAC_CMD was pressed'"
-bindsym   $MAC_ALT+0 exec "i3-nagbar -m '$MAC_ALT was pressed'"
-bindsym   $MAC_CTRL+0 exec "i3-nagbar -m '$MAC_CTRL was pressed'"
+bindsym   $MAC_CMD+0                            exec "i3-nagbar -m 'MAC_CMD ($MAC_CMD) was pressed'"
+bindsym   $MAC_ALT+0                            exec "i3-nagbar -m 'MAC_ALT ($MAC_ALT) was pressed'"
+bindsym   $MAC_CTRL+0                           exec "i3-nagbar -m 'MAC_CTRL ($MAC_CTRL) was pressed'"
+
+#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Screenshots ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
+
+set $screenShotLocation                         /home/$USER/desktop/$(date +%Y-%m-%d_%H-%M-%S).jpg
+
+set $takeScreenShotOfScreenCMD                  maim
+set $takeScreenShotOfSelectionCMD               maim -s
+set $takeScreenShotOfWindowCMD                  maim --window $(xdotool getactivewindow) 
+set $copyToClibboardCMD                         xclip -selection clipboard -t image/png
+
+#| To File Screenshots
+bindsym $MAC_CMD+$shift+3                       exec --no-startup-id "$takeScreenShotOfScreenCMD $screenShotLocation"
+bindsym $MAC_CMD+$shift+4                       exec --no-startup-id "$takeScreenShotOfSelectionCMD $screenShotLocation"
+bindsym $MAC_CMD+$shift+5                       exec "i3-nagbar -f '$fontFamily $fontsize' -m 'Select an action for what to take a screenshot of' -B 'entire screen' '$takeScreenShotOfScreenCMD $screenShotLocation' -B 'entire screen' '$takeScreenShotOfSelectionCMD $screenShotLocation' -B 'active window' '$takeScreenShotOfWindowCMD $screenShotLocation'"
+
+#| Clipboard Screenshots
+bindsym $MAC_CMD+$MAC_CTRL+$shift+3             exec --no-startup-id "$takeScreenShotOfScreenCMD | $copyToClibboardCMD"
+bindsym $MAC_CMD+$MAC_CTRL+$shift+4             exec --no-startup-id "$takeScreenShotOfScreenCMD -s | $copyToClibboardCMD"
+bindsym $MAC_CMD+$MAC_CTRL+$shift+5             exec "i3-nagbar -f '$fontFamily $fontsize' -m 'Select an action for what to take a screenshot of' -B 'entire screen' '$takeScreenShotOfScreenCMD | $copyToClibboardCMD' -B 'selection' '$takeScreenShotOfSelectionCMD | $copyToClibboardCMD' -B 'active window' '$takeScreenShotOfWindowCMD | $copyToClibboardCMD'"
 
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Moving Focus between Work Spaces ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
 
 #| Using indexes
-bindsym   $MAC_CTRL+1                           workspace $ws1; layout tabbed
-bindsym   $MAC_CTRL+2                           workspace $ws2; layout tabbed
-bindsym   $MAC_CTRL+3                           workspace $ws3; layout tabbed
-bindsym   $MAC_CTRL+4                           workspace $ws4; layout stacking
-bindsym   $MAC_CTRL+5                           workspace $ws5; layout default
+#// bindsym   $MAC_CTRL+1                           workspace $ws1; layout tabbed
+#// bindsym   $MAC_CTRL+2                           workspace $ws2; layout tabbed
+#// bindsym   $MAC_CTRL+3                           workspace $ws3; layout tabbed
+#// bindsym   $MAC_CTRL+4                           workspace $ws4; layout stacking
+#// bindsym   $MAC_CTRL+5                           workspace $ws5; layout default
        
+bindsym   $MAC_CTRL+1                           workspace $ws1
+bindsym   $MAC_CTRL+2                           workspace $ws2
+bindsym   $MAC_CTRL+3                           workspace $ws3
+bindsym   $MAC_CTRL+4                           workspace $ws4
+bindsym   $MAC_CTRL+5                           workspace $ws5
+
 #| Using arrow keys          
 bindsym   $MAC_CTRL+Left                        workspace prev
 bindsym   $MAC_CTRL+Right                       workspace next
@@ -66,8 +91,8 @@ bindsym   $MAC_CTRL+$MAC_ALT+1                   focus output primary
 #| Using arrow keys      
 bindsym   $MAC_CTRL+$MAC_ALT+Left               focus output left
 bindsym   $MAC_CTRL+$MAC_ALT+Down               focus output down
-bindsym   $MAC_CTRL+$MAC_ALT+Up                  focus output up
-bindsym   $MAC_CTRL+$MAC_ALT+Right               focus output right
+bindsym   $MAC_CTRL+$MAC_ALT+Up                 focus output up
+bindsym   $MAC_CTRL+$MAC_ALT+Right              focus output right
       
 #| Using VIM keys      
 bindsym   $MAC_CTRL+$MAC_ALT+j                  focus output left
@@ -95,19 +120,30 @@ bindsym   $MAC_CTRL+$shift+semicolon            move container to workspace next
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Moving Windows between Displays ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
 
 #| Using indexes
-bindsym   $MAC_CTRL+$MAC_ALT+$shift+1           move container to output primary
+bindsym   $MAC_CTRL+$MAC_ALT+$shift+1           move workspace to output primary
+#// bindsym   $MAC_CTRL+$MAC_ALT+$shift+1           move container to output primary
 
 #| Using arrow keys
-bindsym   $MAC_CTRL+$MAC_ALT+$shift+Left        move container to output left; focus output left
-bindsym   $MAC_CTRL+$MAC_ALT+$shift+Down        move container to output down; focus output down
-bindsym   $MAC_CTRL+$MAC_ALT+$shift+Up          move container to output up; focus output up
-bindsym   $MAC_CTRL+$MAC_ALT+$shift+Right       move container to output right; focus output righ
+bindsym   $MAC_CTRL+$MAC_ALT+$shift+Left        move workspace to output left; focus output left
+bindsym   $MAC_CTRL+$MAC_ALT+$shift+Down        move workspace to output down; focus output down
+bindsym   $MAC_CTRL+$MAC_ALT+$shift+Up          move workspace to output up; focus output up
+bindsym   $MAC_CTRL+$MAC_ALT+$shift+Right       move workspace to output right; focus output righ
+
+#// bindsym   $MAC_CTRL+$MAC_ALT+$shift+Left        move container to output left; focus output left
+#// bindsym   $MAC_CTRL+$MAC_ALT+$shift+Down        move container to output down; focus output down
+#// bindsym   $MAC_CTRL+$MAC_ALT+$shift+Up          move container to output up; focus output up
+#// bindsym   $MAC_CTRL+$MAC_ALT+$shift+Right       move container to output right; focus output righ
 
 #| Using VIM keys
-bindsym   $MAC_CTRL+$MAC_ALT+$shift+j           move container to output left; focus output left
-bindsym   $MAC_CTRL+$MAC_ALT+$shift+k           move container to output down; focus output down
-bindsym   $MAC_CTRL+$MAC_ALT+$shift+l           move container to output up; focus output up
-bindsym   $MAC_CTRL+$MAC_ALT+$shift+semicolon   move container to output right; focus output righ
+bindsym   $MAC_CTRL+$MAC_ALT+$shift+j           move workspace to output left; focus output left
+bindsym   $MAC_CTRL+$MAC_ALT+$shift+k           move workspace to output down; focus output down
+bindsym   $MAC_CTRL+$MAC_ALT+$shift+l           move workspace to output up; focus output up
+bindsym   $MAC_CTRL+$MAC_ALT+$shift+semicolon   move workspace to output right; focus output righ
+
+#// bindsym   $MAC_CTRL+$MAC_ALT+$shift+j           move container to output left; focus output left
+#// bindsym   $MAC_CTRL+$MAC_ALT+$shift+k           move container to output down; focus output down
+#// bindsym   $MAC_CTRL+$MAC_ALT+$shift+l           move container to output up; focus output up
+#// bindsym   $MAC_CTRL+$MAC_ALT+$shift+semicolon   move container to output right; focus output righ
 
 #~~~~~~~~~~~~~~~~~~~~~~~~~~ Moving Focus between windows on the same Work Space and Display ~~~~~~~~~~~~~~~~~~~~~~~~~~#
 
@@ -150,25 +186,25 @@ bindsym   $MAC_CTRL+s layout                    toggle split
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ MANAGING USER SESSION ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
 
 # lock screen
-bindsym   $MAC_CMD+$MAC_CTRL+q             exec i3lock
+bindsym   $MAC_CMD+$MAC_CTRL+q                  exec i3lock
 
 # exit i3 (logs you out of your X session)
-set       $exitWarn                "i3-nagbar -t warning -m 'Are you sure you want to log out?' -B 'confirm' 'i3-msg exit'"
-bindsym   $MAC_CTRL+Shift+q            exec $exitWarn
+set       $exitWarn                             "i3-nagbar -t warning -m 'Are you sure you want to log out?' -B 'confirm' 'i3-msg exit'"
+bindsym   $MAC_CTRL+Shift+q                     exec $exitWarn
 
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ CONTROLLING AUDIO ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
 
 # Use pactl to adjust volume in PulseAudio.
-set       $refresh_i3status        killall -SIGUSR1 i3status
-bindsym   XF86AudioRaiseVolume     exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
-bindsym   XF86AudioLowerVolume     exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
-bindsym   XF86AudioMute            exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
-bindsym   XF86AudioMicMute         exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
+set       $refresh_i3status                     killall -SIGUSR1 i3status
+bindsym   XF86AudioRaiseVolume                  exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
+bindsym   XF86AudioLowerVolume                  exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
+bindsym   XF86AudioMute                         exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
+bindsym   XF86AudioMicMute                      exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ CONTROLLING BRIGHTNESS ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
 
-bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl set +5%
-bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 5%-
+bindsym   XF86MonBrightnessUp                   exec --no-startup-id brightnessctl set +5%
+bindsym   XF86MonBrightnessDown                 exec --no-startup-id brightnessctl set 5%-
 
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ LAUNCHER SETTINGS ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
 # A more modern dmenu replacement is rofi:
@@ -178,21 +214,22 @@ bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 5%-
 # bindcode $MAC_CTRL+40 exec --no-startup-id i3-dmenu-desktop
 
 # dmenu
-set   $search_case_insensitive     -i
-set   $dmenu_amount_of_Lines       -l 10
-set   $dmenu_foreground            -nf
-set   $dmenu_foreground_selected   -sf
-set   $dmenu_background            -nb
-set   $dmenu_background_selected   -sb
-bindsym $MAC_CMD+space exec --no-startup-id dmenu_run $search_case_insensitive $dmenu_amount_of_Lines $dmenu_background $background $dmenu_foreground $inactive $dmenu_foreground_selected $foreground $dmenu_background_selected $background
+set   $search_case_insensitive                  -i
+set   $dmenu_amount_of_Lines                    -l 10
+set   $dmenu_foreground                         -nf
+set   $dmenu_foreground_selected                -sf
+set   $dmenu_background                         -nb
+set   $dmenu_background_selected                -sb
+bindsym $MAC_CMD+space                          exec --no-startup-id dmenu_run $search_case_insensitive 
+#$dmenu_amount_of_Lines $dmenu_background $background $dmenu_foreground $inactive $dmenu_foreground_selected $foreground $dmenu_background_selected $background
 
 # rofi
-set $rofi_amount_of_Lines  -l 10
-set $rofi_width            -width 100
-set $rofi_opacity          -opacity 85
-set $rofi_foreground       -fg
-set $rofi_background       -bg
-# bindsym $MAC_CMD+space exec --no-startup-id rofi $rofi_opacity $rofi_width $rofi_amount_of_Lines -show run
+set   $rofi_amount_of_Lines                     -l 10
+set   $rofi_width                               -width 100
+set   $rofi_opacity                             -opacity 85
+set   $rofi_foreground                          -fg
+set   $rofi_background                          -bg
+# bindsym $MAC_CMD+space                        exec --no-startup-id rofi $rofi_opacity $rofi_width $rofi_amount_of_Lines -show run
 # $rofi_foreground $foreground $rofi_background $background
 
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ RESIZING MODE ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
@@ -207,21 +244,21 @@ mode "resize" {
     # Pressing right will grow the window’s width.
     # Pressing up will shrink the window’s height.
     # Pressing down will grow the window’s height.
-    bindsym j resize shrink width 10 px or 10 ppt
-    bindsym k resize grow height 10 px or 10 ppt
-    bindsym l resize shrink height 10 px or 10 ppt
-    bindsym semicolon resize grow width 10 px or 10 ppt
+    bindsym   j                                 resize shrink width 10 px or 10 ppt
+    bindsym   k                                 resize grow height 10 px or 10 ppt
+    bindsym   l                                 resize shrink height 10 px or 10 ppt
+    bindsym   semicolon                         resize grow width 10 px or 10 ppt
 
     # same bindings, but for the arrow keys
-    bindsym Left resize shrink width 10 px or 10 ppt
-    bindsym Down resize grow height 10 px or 10 ppt
-    bindsym Up resize shrink height 10 px or 10 ppt
-    bindsym Right resize grow width 10 px or 10 ppt
+    bindsym   Left                              resize shrink width 10 px or 10 ppt
+    bindsym   Down                              resize grow height 10 px or 10 ppt
+    bindsym   Up                                resize shrink height 10 px or 10 ppt
+    bindsym   Right                             resize grow width 10 px or 10 ppt
 
     # back to normal: Enter or Escape or $MAC_CTRL+r
-    bindsym Return mode "default"
-    bindsym Escape mode "default"
-    bindsym $MAC_CTRL+r mode "default"
+    bindsym   Return                            mode "default"
+    bindsym   Escape                            mode "default"
+    bindsym   $MAC_CTRL+r                       mode "default"
 }
 
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
