Added an assets folder in '.config', and moved the images, and scripts there. Added a screen-shot sound to play when making a screen shot, and moved that there under '.config/assets/sound/screen-shot.mp3'.

--- a/.config/i3/keybindings.conf
+++ b/.config/i3/keybindings.conf
@@ -49,16 +49,17 @@ set $takeScreenShotOfScreenCMD                  maim
 set $takeScreenShotOfSelectionCMD               maim -s
 set $takeScreenShotOfWindowCMD                  maim --window $(xdotool getactivewindow) 
 set $copyToClibboardCMD                         xclip -selection clipboard -t image/png
+set $playScreenShotSound                        mpg123 /home/$USER/.config/assets/sounds/screen-shot.mp3
 
 #| To File Screenshots
-bindsym $MAC_CMD+$shift+3                       exec --no-startup-id "$takeScreenShotOfScreenCMD $screenShotLocation"
-bindsym $MAC_CMD+$shift+4                       exec --no-startup-id "$takeScreenShotOfSelectionCMD $screenShotLocation"
-bindsym $MAC_CMD+$shift+5                       exec "i3-nagbar -f '$fontFamily $fontsize' -m 'Select an action for what to take a screenshot of' -B 'entire screen' '$takeScreenShotOfScreenCMD $screenShotLocation' -B 'entire screen' '$takeScreenShotOfSelectionCMD $screenShotLocation' -B 'active window' '$takeScreenShotOfWindowCMD $screenShotLocation'"
+bindsym $MAC_CMD+$shift+3                       exec --no-startup-id "$takeScreenShotOfScreenCMD $screenShotLocation && $playScreenShotSound"
+bindsym $MAC_CMD+$shift+4                       exec --no-startup-id "$takeScreenShotOfSelectionCMD $screenShotLocation && $playScreenShotSound"
+bindsym $MAC_CMD+$shift+5                       exec "i3-nagbar -f '$fontFamily $fontsize' -m 'Select an action for what to take a screenshot of' -B 'entire screen' '$takeScreenShotOfScreenCMD $screenShotLocation && $playScreenShotSound' -B 'entire screen' '$takeScreenShotOfSelectionCMD $screenShotLocation && $playScreenShotSound' -B 'active window' '$takeScreenShotOfWindowCMD $screenShotLocation && $playScreenShotSound'"
 
 #| Clipboard Screenshots
 bindsym $MAC_CMD+$MAC_CTRL+$shift+3             exec --no-startup-id "$takeScreenShotOfScreenCMD | $copyToClibboardCMD"
 bindsym $MAC_CMD+$MAC_CTRL+$shift+4             exec --no-startup-id "$takeScreenShotOfScreenCMD -s | $copyToClibboardCMD"
-bindsym $MAC_CMD+$MAC_CTRL+$shift+5             exec "i3-nagbar -f '$fontFamily $fontsize' -m 'Select an action for what to take a screenshot of' -B 'entire screen' '$takeScreenShotOfScreenCMD | $copyToClibboardCMD' -B 'selection' '$takeScreenShotOfSelectionCMD | $copyToClibboardCMD' -B 'active window' '$takeScreenShotOfWindowCMD | $copyToClibboardCMD'"
+bindsym $MAC_CMD+$MAC_CTRL+$shift+5             exec "i3-nagbar -f '$fontFamily $fontsize' -m 'Select an action for what to take a screenshot of' -B 'entire screen' '$takeScreenShotOfScreenCMD | $copyToClibboardCMD && $playScreenShotSound' -B 'selection' '$takeScreenShotOfSelectionCMD | $copyToClibboardCMD && $playScreenShotSound' -B 'active window' '$takeScreenShotOfWindowCMD | $copyToClibboardCMD && $playScreenShotSound'"
 
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Moving Focus between Work Spaces ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
 
