--- a/.config/i3/startup_processes.conf
+++ b/.config/i3/startup_processes.conf
@@ -1,7 +1,7 @@
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
 
 # Set the background
-exec --no-startup-id nitrogen --set-zoom-fill /home/tygo/wallpapers/default.jpg
+exec --no-startup-id nitrogen --set-zoom-fill /home/$USER/.config/assets/images/wallpapers/default.jpg
 # exec_always --no-startup-id nitrogen --restore
 
 # Start XDG autostart .desktop files using dex. See also : https://wiki.archlinux.org/index.php/XDG_Autostart for more.
