moved the i3 related config files such as 'i3block', and 'i3status' into '.config/i3/' for example '.config/i3/blocks/config'.

--- a/.config/i3/aesthetics.conf
+++ b/.config/i3/aesthetics.conf
@@ -28,10 +28,8 @@ bar {
     tray_output               none
     #padding                   15px
     #tray_padding              15px
-    status_command            i3status --config ~/.config/i3status/config
-    
-    # status_command            i3blocks
-    # -c $i3blocksconf # This still has to go onto the line above, but it keeps crashing... :/
+    status_command            i3status --config /home/$USER/.config/i3/status/config
+    # status_command            i3blocks -c /home/$USER/.config/i3/blocks/config # This still has to go onto the line above, but it keeps crashing... :/
 
     colors {
 
