Moved the keybinding-to-the-command for volume from the keybindings config for i3, to the assets folder. I did this because the volume would increase past 100% and I didn't want this.

--- a/.config/i3/blocks/config
+++ b/.config/i3/blocks/config
@@ -32,7 +32,7 @@
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
 
 # Global properties
-command=/home/tygo/.config/i3/blocklets/$BLOCK_NAME
+command=/home/$USER/.config/i3/blocks/blocklets/$BLOCK_NAME
 #/usr/share/i3blocks/$BLOCK_NAME
 separator_block_width=35
 markup=none
