--- a/.config/i3/keybindings.conf
+++ b/.config/i3/keybindings.conf
@@ -195,12 +195,10 @@ bindsym   $MAC_CTRL+Shift+q                     exec $exitWarn
 
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ CONTROLLING AUDIO ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
 
-# Use pactl to adjust volume in PulseAudio.
-set       $refresh_i3status                     killall -SIGUSR1 i3status
-bindsym   XF86AudioRaiseVolume                  exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
-bindsym   XF86AudioLowerVolume                  exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
-bindsym   XF86AudioMute                         exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
-bindsym   XF86AudioMicMute                      exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
+bindsym   XF86AudioRaiseVolume                  exec --no-startup-id sh /home/$USER/.config/assets/scripts/i3/volume/raise.sh
+bindsym   XF86AudioLowerVolume                  exec --no-startup-id sh /home/$USER/.config/assets/scripts/i3/volume/lower.sh
+bindsym   XF86AudioMute                         exec --no-startup-id sh /home/$USER/.config/assets/scripts/i3/volume/toggle-mute.sh
+bindsym   XF86AudioMicMute                      exec --no-startup-id sh /home/$USER/.config/assets/scripts/i3/microphone/toggle-mute.sh
 
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ CONTROLLING BRIGHTNESS ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
 
